--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Santhosh Perani Ambalam Portfolio<br />
 						</h1>
-						<p>Data Analyst interested in SQL, Tableau, and python  
+						<p>Data Analyst interested in SQL, Tableau, and python <a href="https://www.linkedin.com/in/santhosh-peraniambalam-1b6155239/">@Santhosh</a>
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
