--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Santhosh Perani Ambalam Portfolio<br />
 						</h1>
-						<p>Data Analyst interested in SQL, Tableau, and python <a href="https://www.linkedin.com/in/santhosh-peraniambalam-1b6155239/">@Santhosh</a>
+						<p>Data Analyst interested in SQL, Tableau, and python <a href="https://www.linkedin.com/in/santhosh-peraniambalam-1b6155239/">@Santhosh</a> 
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -87,6 +87,19 @@
 									<p> Tableau Dashboards for projects on COVID 19,..</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/santhosh5769/viz/CovidDashboard_16537214289530/Dashboard1" class="button">View Project</a></li>
+									</ul>
+								</article>
+
+								<article>
+									<header>
+										
+										<h2><a href="https://github.com/santhosh-93/PortfolioProjects/blob/main/IPL%20AUCTION%20PYTHON%20ANALYSIS.ipynb">Ipl auction 2022 analysis using Python<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/santhosh-93/PortfolioProjects/blob/main/IPL%20AUCTION%20PYTHON%20ANALYSIS.ipynb" class="image fit"><img src="images/IPL.jfif" alt="" /></a>
+									<p> In this project, data manipulation, visulaisation was done and libraries like pandas, seaborn and matplotlib were used.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/santhosh-93/PortfolioProjects/blob/main/IPL%20AUCTION%20PYTHON%20ANALYSIS.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 
